Separate JS into separate file

--- a/em-out/index.html
+++ b/em-out/index.html
@@ -76,276 +76,8 @@
       <p><a href="http://emscripten.org">emscripten</a></p>
 
     </div>
-    <script type='text/javascript'>
-      /* Viewer
-         TODO: Wrap as separate class { */
-      var splitPosition = 0.5;
-      var viewWidth = 0;
-      var viewHeight = 0;
 
-      function setElementDimension(query, w, h) {
-        var e = document.querySelector(query);
-        e.style.width = ""+w+"px";
-        e.style.height = ""+h+"px";
-      }
-
-      function updateViewer(width, height) {
-        setElementDimension("#viewer", width, height + 100);
-        setElementDimension(".viewer-parent", width, height + 100);
-
-	// This shouldn't be required, but the right-wrapper expands in height for some reason
-        setElementDimension("#viewer-right .wrapper", width, height);
-
-        viewWidth = width;
-        viewHeight = height;
-
-        updateSplit();
-        setElementTop("#left-info", viewHeight);
-        setElementTop("#right-info", viewHeight);
-      }
-
-      function updateSplit() {
-        var leftWidth = Math.floor(viewWidth * splitPosition);
-        var rightWidth = viewWidth - leftWidth;
-        setElementDimension("#viewer-left", leftWidth, viewHeight + 100);
-        setElementDimension("#viewer-right", rightWidth, viewHeight + 100);
-      }
-
-      function setElementTop(query, t) {
-        var e = document.querySelector(query);
-        e.style.top = ""+t+"px";
-      }
-
-      function moveSplit(event) {
-        var view = document.getElementById("viewer");
-        var offset = view.getBoundingClientRect();
-        var x = Math.max(0, event.clientX - offset.left);
-        var y = Math.max(0, event.clientY - offset.top);
-
-        splitPosition = x / viewWidth;
-
-        updateSplit();
-
-        setElementTop("#left-info", viewHeight);
-        setElementTop("#right-info", viewHeight);
-        return false;
-      }
-
-      /* } End of Viewer */
-
-      function init() {
-        viewer.parentElement.hidden = true;
-        imgInfos.sort(function (a, b) {
-          if (!b.imgSize) {
-            return 1;
-          } else if (!a.imgSize) {
-            return -1;
-          } else {
-            return a.imgSize.height - b.imgSize.height;
-          }
-        });
-        var selectElem = document.getElementById('imageSelect');
-        function addOption(idx, title) {
-          var optElem = document.createElement("option");
-          optElem.setAttribute("value", "value"+idx);
-          optElem.textContent = title;
-          selectElem.appendChild(optElem);
-        }
-        for (var i = 1; i < imgInfos.length; i++) {
-          var info = imgInfos[i];
-  	  addOption(i, info.name + " " + info.imgSize.width + " x " + info.imgSize.height);
-        }
-        document.getElementById("viewer").addEventListener("mousemove", moveSplit, false);
-        bgColorChanged();
-
-        setLeftInfo("FLIF", 0, 0);
-        setRightInfo("PNG", 0, 0);
-      }
-
-      // TODO: Call on window load, or some such
-      init();
-
-      function resetView() {
-        viewer.parentElement.hidden = false;
-        document.getElementById('pngImg').src = ""
-        var canvas = document.getElementById('canvas');
-        var ctx = canvas.getContext("2d");
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-      }
-
-      function showAbout() {
-        document.getElementById('aboutModal').classList.add('visible');
-      }
-
-      function hideAbout() {
-        document.getElementById('aboutModal').classList.remove('visible');
-      }
-
-      function truncateChanged() {
-        decode();
-      }
-
-      function imageChanged() {
-        decode();
-      }
-
-      function bgColorChanged() {
-        var bgInput = document.getElementById('bgColor');
-	console.log(bgInput.value);
-        document.querySelector("#viewer-left .wrapper").style.background = bgInput.value;
-        document.querySelector("#viewer-right .wrapper").style.background = bgInput.value;
-      }
-
-/*
-      var imgInfos = [
-         {},
-         {name: "watch_by8", width:497, height: 331, fileSizes: {flif:credit:"https://unsplash.com/veri_ivanova"},
-         {name: "1_webp_ll", width:400, height: 301},
-         {name: "2_webp_ll", width:386, height: 395},
-         {name: "3_webp_ll", width:800, height: 600},
-         {name: "monkey",    width:1132, height: 849, credit:"https://unsplash.com/raf"}
-      ];
-*/
-
-      function fileExists(path) {
-        try {
-          var stat = FS.stat(path)
-          return stat != undefined;
-        } catch(e) {
-          return false;
-        }
-      }
-
-      function getURLAsBytes(url, andThen) {
-          var xhr = new XMLHttpRequest();
-          xhr.responseType = "arraybuffer";
-          xhr.open("GET", url);
-          xhr.onload = function() {
-            var content = new Uint8Array(this.response);
-            andThen(content);
-          };
-          xhr.send();
-      }
-
-      function loadFile(path, url, andThen) {
-        if (fileExists(path)) {
-          andThen();
-        } else {
-          Module.setStatus("Loading...");
-          getURLAsBytes(url, function(content) {
-            FS.writeFile(path, content, {encoding:"binary"})
-            andThen();
-          });
-        }
-      }
-
-      function ensureDir(dirPath) {
-        try {
-          FS.mkdir(dirPath);
-        } catch (e) {
-          // Ignored
-        }
-      }
-
-      function setRightInfo(title, truncSize, fullSize) {
-        var titleStr = '<p>'+title+'&nbsp;»</p>';
-        setInfo('#right-info', titleStr, truncSize, fullSize);
-      }
-
-      function setLeftInfo(title, truncSize, fullSize) {
-        var titleStr = '<p>«&nbsp;'+title+'</p>';
-        setInfo('#left-info', titleStr, truncSize, fullSize);
-      }
-
-      function humanize(length) {
-        return (length > (1024 * 1024)) ?
-                 ''+(Math.round((length / (1024*1024))*10)/10)+'mB' :
-                 (
-                   (length > 1024) ?  ''+(Math.round((length / 1024)*10)/10)+'kB' : ''+length+'B'
-                 );
-	
-      }
-
-      function setInfo(query, titleStr, truncSize, fullSize) {
-        var sizeStr = truncSize == fullSize ? humanize(fullSize) : humanize(truncSize) + "&nbsp;/&nbsp;" + humanize(fullSize);
-        var sizeParaStr = '<p class="size">'+sizeStr+'</p>';
-        var htmlStr = titleStr + sizeParaStr;
-        document.querySelector(query).innerHTML = htmlStr;
-      }
-
-      function decodePng() {
-        var imageSelect = document.getElementById('imageSelect');
-        var imgIdx = imageSelect.selectedIndex;
-
-        if (imgIdx > 0) {
-          var truncateInput = document.getElementById('truncate');
-          var truncateAmount = 100 - truncateInput.value;
-
-          var imgInfo = imgInfos[imgIdx];
-          updateViewer(imgInfo.imgSize.width, imgInfo.imgSize.height);
-          var path = "assets/"+imgInfo.name+"-i.png";
-          getURLAsBytes(path, function (content) {
-            var blob = new Blob([content], {type: 'image/png'});
-            if (truncateAmount != 100) {
-              // var truncatedSize =  Math.floor(content.length * (truncateAmount / 100));
-              var flifSize = imgInfo.fileSizes.flif;
-              var truncatedSize =  Math.min(content.length, Math.floor(flifSize * (truncateAmount / 100)));
-              setRightInfo("PNG", truncatedSize, content.length);
-              blob = blob.slice(0, truncatedSize);
-            } else {
-              setRightInfo("PNG", content.length, content.length);
-            }
-            var burl = URL.createObjectURL(blob);
-            document.getElementById('pngImg').src = burl;
-          });
-        }
-      }
-
-      function decode() {
-        resetView();
-
-        ensureDir("/assets");
-
-        var imageSelect = document.getElementById('imageSelect');
-        var imgIdx = imageSelect.selectedIndex;
-
-        if (imgIdx > 0) {
-          decodePng();
-          var path = "assets/"+imgInfos[imgIdx].name+".flif";
-          loadFile("/" + path, path, function () {
-            decodeSync(imgIdx);
-          });
-        }
-      }
-
-      function decodeSync(imgIdx) {
-        if (imgIdx > 0) {
-          var info = imgInfos[imgIdx];
-          var truncateInput = document.getElementById('truncate');
-          var truncateAmount = 100 - truncateInput.value;
-          if (info.credit) {
-            document.getElementById("credits").innerHTML = "<a href='"+info.credit+"'>Image credit</a>"
-          } else {
-            document.getElementById("credits").innerHTML = "";
-          }
-          Module.setStatus("Decoding...");
-
-          var flifSize = info.fileSizes.flif;
-          var truncatedSize = Math.floor(flifSize * (truncateAmount/100));
-          setLeftInfo("FLIF", truncatedSize, flifSize);
-
-	  setTimeout(function() {
-            Module.ccall("mainy", 'number', ['number', 'string'], [truncateAmount, "/assets/"+info.name+".flif"]);
-            // Module.setStatus("Decoded with " + truncateAmount + "% stream");
-            if (truncateAmount == 100) {
-              Module.setStatus("Comparing with original image");
-            } else {
-              Module.setStatus("Comparing with same sized PNG");
-            }
-	  }, 10);
-        }
-      }
-    </script>
+    <script type='text/javascript' src="flif-demo.js"></script>
 
     <script type='text/javascript'>
       var statusElement = document.getElementById('status');
