--- a/em-out/index.html
+++ b/em-out/index.html
@@ -18,6 +18,8 @@
             <label for="imageSelect">Image: </label>
   	    <select id="imageSelect" onchange="imageChanged()">
   	      <option value="value0" selected disabled>Choose one ...</option> 
+  	      <optgroup class="stillsGroup" label="Stills"></optgroup>
+  	      <optgroup class="animationsGroup" label="Animations"></optgroup>
   	    </select>
           </div>
           <div class="inputGroup">
