--- a/api.html
+++ b/api.html
@@ -48,7 +48,7 @@
 <hr />
 
 <ul class="links pad">
-<li> <a href='/polyflif-sample'>Sample Page</a> </li>
+<li> <a href='/polyflif-sample.html'>Sample Page</a> </li>
 <li> <a href='/'>Interactive demo</a> </li>
 </ul>
 
