--- a/api.html
+++ b/api.html
@@ -48,8 +48,8 @@
 <hr />
 
 <ul class="links pad">
-<li> <a href='/polyflif-sample.html'>Sample Page</a> </li>
-<li> <a href='/'>Interactive demo</a> </li>
+<li> <a href='polyflif-sample.html'>Sample Page</a> </li>
+<li> <a href='index.html'>Interactive demo</a> </li>
 </ul>
 
 <div class="pad">
