--- a/polyflif-sample.html
+++ b/polyflif-sample.html
@@ -7,7 +7,7 @@
 <body>
 <h2>Poly-FLIF demo</h2>
 <p>The images shown below are decoded FLIF images. You need Javascript enabled to see them.</p>
-<p>Read <a href="/api.html">about the API</a>, or checkout the <a href="/">interactive demo</a>.</p>
+<p>Read <a href="api.html">about the API</a>, or checkout the <a href="index.html">interactive demo</a>.</p>
 
 <h3>Still Image</h3>
 <canvas data-polyflif-src="assets/1_webp_ll.flif"></canvas>
