--- a/api.html
+++ b/api.html
@@ -30,7 +30,7 @@
 <div class="quickStart pad" >
 <h2>Quick Start</h2>
 
-<h3>Step 1: Drop the flif script onto your page</h3>
+<h3>Step 1: Drop the script on your page</h3>
 <pre>
 &lt;script src="flif.js"&gt;&lt;/script&gt;
 </pre>
