Added link to FLIF homepage

--- a/api.html
+++ b/api.html
@@ -50,6 +50,7 @@
 <ul class="links pad">
 <li> <a href='polyflif-sample.html'>Sample Page</a> </li>
 <li> <a href='index.html'>Interactive demo</a> </li>
+<li> <a href='http://flif.info'>About FLIF</a> </li>
 </ul>
 
 <div class="pad">
