Added link to FLIF site

--- a/polyflif-sample.html
+++ b/polyflif-sample.html
@@ -6,7 +6,7 @@
 
 <body>
 <h2>Poly-FLIF demo</h2>
-<p>The images shown below are decoded FLIF images. You need Javascript enabled to see them.</p>
+<p>The images shown below are decoded <a href="http://flif.info">FLIF</a> images. You need Javascript enabled to see them.</p>
 <p>Read <a href="api.html">about the API</a>, or checkout the <a href="index.html">interactive demo</a>.</p>
 
 <h3>Still Image</h3>
