license and code details

--- a/api.html
+++ b/api.html
@@ -40,9 +40,10 @@
 &lt;canvas data-polyflif-src="xyz.flif"&gt;&lt;/canvas&gt;
 </pre>
 
-<h3>Step 3: <strike>? ? ? ?</strike> Wait for the image to load and render</h3>
+<h3>Step 3: <strike>? ? ? ?</strike> Watch the image load and render</h3>
 
 <h3>Step 4: Profit</h3>
+The decoder is LGPLv3 licensed. The code is on <a href="https://github.com/UprootLabs/poly-flif">GitHub</a>. Fork away.
 </div>
 
 <hr />
