Added link to release page

--- a/api.html
+++ b/api.html
@@ -34,6 +34,7 @@
 <pre>
 &lt;script src="flif.js"&gt;&lt;/script&gt;
 </pre>
+<p>The script can be downloaded from the <a href="https://github.com/UprootLabs/poly-flif/releases">release</a> page.</p>
 
 <h3>Step 2: Add a canvas element where you need the FLIF image to appear</h3>
 <pre>
