clarified the data format

--- a/api.html
+++ b/api.html
@@ -98,7 +98,7 @@ Example usage:
 
 <pre>
 var canvasElement = document.getElementById("...");    // get canvas element somehow
-var buffer = ...                                       // get data somehow; XHR, for example.
+var buffer = ...                                       // get data in Uint8Array; via XHR, for example.
 
 var options = {
   canvas: canvasElement,
