corrected the API name

--- a/api.html
+++ b/api.html
@@ -109,7 +109,7 @@ var pf = new PolyFlif(options);
 var truncation = 0;                                   // in percent (0 to 100).
 var rw = 0;                                           // requested width (if 0, original image width is used)
 var rh = 0;                                           // requested height (if 0, original image height is used)
-pf.start(truncation, rw, rh);
+pf.begin(truncation, rw, rh);
 </pre>
 
 </div>
