update to latest, with partial load and decode support

--- a/polyflif-sample.html
+++ b/polyflif-sample.html
@@ -40,6 +40,27 @@ margin-left: 2em;
   <canvas data-polyflif-src="assets/clock.flif"></canvas>
 </div>
 
+<hr/>
+
+<h2>Partial load and decode</h2>
+
+<div class="block">
+  <h3>Still Image (25%)</h3>
+  <canvas data-polyflif-src="assets/1_webp_ll.flif" data-polyflif-bytes="19000"></canvas>
+</div>
+
+<div class="block">
+  <h3>Background Image (25%)</h3>
+  <div data-polyflif-bg-src="assets/watch_by8.flif" data-polyflif-bytes="40000"  style="height: 331px; width: 497px">
+    <p style="color: white; background: rgba(10, 10, 100, 0.5); padding: 1em;">Checkout the background image!</p>
+  </div>
+</div>
+
+<div class="block">
+  <h3>Animation (33%)</h3>
+  <canvas data-polyflif-src="assets/clock.flif" data-polyflif-bytes="8000"></canvas>
+</div>
+
 </body>
 
 </html>
