updated samples and api

--- a/api.html
+++ b/api.html
@@ -89,9 +89,9 @@ First, style the canvas element using CSS so that it has the desired dimensions.
 </p>
 
 <p>
-Then, add the `data-polyflif-scale` attribute to the canvas element. When this attribute is present, the compute size of the canvas
+Then, add the `data-polyflif-scale` attribute to the canvas element. When this attribute is present, the CSS computed size of the canvas
 element is sent to the decoder (equivalent to the -r option of the FLIF CLI tool). The image is decoded so that it fits the requested
-dimensions, and the canvas element is resized to the resized dimensions.
+dimensions, and the canvas element is resized to those dimensions.
 </p>
 
 <p>
