--- a/polyflif-sample.html
+++ b/polyflif-sample.html
@@ -61,6 +61,21 @@ margin-left: 2em;
   <canvas data-polyflif-src="assets/clock.flif" data-polyflif-bytes="8000"></canvas>
 </div>
 
+<hr/>
+
+<h2>Scale + Partial load</h2>
+<p>(Great for creating thumbnails)</p>
+
+<div class="block">
+  <h3>Still Image (dimensions halved, data 25%)</h3>
+  <canvas data-polyflif-src="assets/1_webp_ll.flif" data-polyflif-scale="true" data-polyflif-bytes="19000" style="width:200px;height:151px"></canvas>
+</div>
+
+<div class="block">
+  <h3>Animation (dimensions halved, data 33%)</h3>
+  <canvas data-polyflif-src="assets/clock.flif" data-polyflif-scale="true" data-polyflif-bytesx="10000" style="width:75px;height:75px"></canvas>
+</div>
+
 </body>
 
 </html>
