--- a/api.html
+++ b/api.html
@@ -44,7 +44,7 @@
 <h3>Step 3: <strike>? ? ? ?</strike> Watch the image load and render</h3>
 
 <h3>Step 4: Profit</h3>
-The decoder is LGPLv3 licensed. The code is on <a href="https://github.com/UprootLabs/poly-flif">GitHub</a>. Fork away.
+The decoder is LGPLv3 licensed. The code is on <a href="https://github.com/UprootLabs/poly-flif">GitHub</a>.
 </div>
 
 <hr />
@@ -56,9 +56,7 @@ The decoder is LGPLv3 licensed. The code is on <a href="https://github.com/Uproo
 </ul>
 
 <div class="pad">
-<h2>Detailed docs</h2>
-Note: this is the first cut of the API. It needs much refinement. Please report any bugs / add your suggestions to the
-<a href="https://github.com/UprootLabs/poly-flif/issues">Github issues</a> list.
+<h2>Documentation</h2>
 
 <h3>Basics</h3>
 The `flif.js` script performs the following steps:
@@ -115,16 +113,17 @@ var options = {
 };
 var pf = new PolyFlif(options);
 
-var truncationPercent = 0;                            // in percent (0 to 100).
-var truncationCount = -1;                              // in bytes (-1 means no truncation)
+var showPreviews = true;                              // boolean. previews are shown when true.
+var truncationPercent = 0;                            // in percent (0 to 100). 0 means no truncation.
+var truncationCount = -1;                             // in bytes (-1 means no truncation)
 var rw = 0;                                           // requested width (if 0, original image width is used)
 var rh = 0;                                           // requested height (if 0, original image height is used)
 
 // Either this version
-pf.beginPercent(truncationPercent, rw, rh);
+pf.beginPercent(showPreviews, truncationPercent, rw, rh);
 
 // Or this version
-pf.beginCount(truncationCount, rw, rh);
+pf.beginCount(showPreviews, truncationCount, rw, rh);
 </pre>
 
 </div>
