--- a/api.html
+++ b/api.html
@@ -100,6 +100,7 @@ actual dimensions, etc).
 </p>
 
 <h3>Low Level API</h3>
+For version 0.8.1
 
 Example usage:
 
@@ -113,16 +114,17 @@ var options = {
 };
 var pf = new PolyFlif(options);
 
+var showPreviews = true;                              // enable or disable previews during progressive decode
 var truncationPercent = 0;                            // in percent (0 to 100). 0 means no truncation.
 var truncationCount = -1;                             // in bytes (-1 means no truncation)
 var rw = 0;                                           // requested width (if 0, original image width is used)
 var rh = 0;                                           // requested height (if 0, original image height is used)
 
 // Either this version
-pf.beginPercent(truncationPercent, rw, rh);
+pf.beginPercent(showPreviews, truncationPercent, rw, rh);
 
 // Or this version
-pf.beginCount(truncationCount, rw, rh);
+pf.beginCount(showPreviews, truncationCount, rw, rh);
 </pre>
 
 </div>
