--- a/api.html
+++ b/api.html
@@ -41,7 +41,7 @@
 &lt;canvas data-polyflif-src="xyz.flif"&gt;&lt;/canvas&gt;
 </pre>
 
-<h3>Step 3: <strike>? ? ? ?</strike> Watch the image load and render</h3>
+<h3>Step 3: FLIF Image loads in to the canvas if Javascript is enabled in the user-agent</h3>
 
 <h3>Step 4: Profit</h3>
 The decoder is LGPLv3 licensed. The code is on <a href="https://github.com/UprootLabs/poly-flif">GitHub</a>.
